 * add -L option to 'lspcheck' command to specify log gain.
 * add -n option to 'mgc2mgclsp' command to specify split number of unit circle.
 * add -p and -d to 'mgc2mgclsp' command to specify maximum number and end condition of interpolation.
 * add -x 16, 22, 24 and 48 option of 'glogsp' and 'grlogsp' command to specify more x-axis scales.
 * unify option to specify log gain into -L option.
 * fix -c option of 'mlsacheck' command to specify the type of modification of filter coefficients.
 * bug fixes.

Version 3.6:
 * add -o option to 'minmax' command to output maximum, minimum or both values.
 * add -o 4 option to 'vstat' command to output medians.
 * add options to 'vopr' command to deal with relational operators, arithmetic/geometric mean, and ceiling/flooring.
 * add -T option to 'smcep' command to specifiy emphasized frequency.
 * add -E option to 'gcep', 'mcep', 'mgcep', 'spec', 'smcep' and 'uels' command to specify floor in dB.
 * add -F option to 'gmm' command to read initial GMM parameter file.
 * add -L and -R option to 'wav2raw' command to deal with stereo wav file.
 * add 'gseries', 'ifftr', 'mlsacheck', 'symmetrize' and 'transpose' command.
 * change -f option of 'lbg' command into -F option.
 * unify option to specify sampling frequency into -s option.
 * fix 'x2x', 'dmp' and 'fd' command to read format string without space in front of '%'.
 * bug fixes.

Version 3.5:
 * add 'dtw' command.
 * add 'mfcc' command.
 * add 'mgc2mgclsp' and 'mgclsp2mgc' command.
 * add two pitch extraction algorithm, 'RAPT' and 'SWIPE' to 'pitch' command.
 * add -R and -M option to 'delta' command, to skip the magic number during the calculation.
 * unify data type for sampling frequency into float in kHz.
 * fix options of 'psgr' and 'grlogsp' command to draw more large graph.
 * fix 'wav2raw' to deal with IEEE float format.
 * bug fixes.

Version 3.4.1:
 * add 'idct' command.