@@ -12,4 +12,5 @@ dist_lpcoef_DATA = lpfcoef.2to1 \
 	lpfcoef.3to2 \
 	lpfcoef.4to3 \
 	lpfcoef.5to2dn \
-	lpfcoef.5to2up 
+	lpfcoef.5to2up \
+	emime/lpfcoef.7to4
