@@ -1,0 +1,57 @@
+-2.02059e-07
+-4.19377e-06
+-2.35035e-05
+-7.48734e-05
+-0.00015442
+-0.000188281
+-5.05567e-06
+0.00058044
+0.00151677
+0.00221077
+0.00150458
+-0.00168565
+-0.00707619
+-0.0118392
+-0.0109136
+0.000190744
+0.0207728
+0.0414233
+0.0455294
+0.0178206
+-0.0427124
+-0.113043
+-0.148084
+-0.098023
+0.0647626
+0.323179
+0.611992
+0.839454
+0.925782
+0.839454
+0.611992
+0.323179
+0.0647626
+-0.098023
+-0.148084
+-0.113043
+-0.0427124
+0.0178206
+0.0455294
+0.0414233
+0.0207728
+0.000190744
+-0.0109136
+-0.0118392
+-0.00707619
+-0.00168565
+0.00150458
+0.00221077
+0.00151677
+0.00058044
+-5.05567e-06
+-0.000188281
+-0.00015442
+-7.48734e-05
+-2.35035e-05
+-4.19377e-06
+-2.02059e-07
