@@ -12,9 +12,11 @@ us_CPPFLAGS = -DLIB=\"$(lpcoefdir)\" -I$(top_srcdir)/include
 dist_lpcoef_DATA = lpfcoef.2to3f \
 	lpfcoef.2to3s \
 	lpfcoef.3to4 \
+	emime/lpfcoef.3to5 \
 	lpfcoef.4to5 \
 	lpfcoef.5to7 \
-	lpfcoef.5to8
+	lpfcoef.5to8 \
+	emime/lpfcoef.7to8
 
 EXTRA_DIST = us16.in uscd.in
 CLEANFILES = $(bin_PROGRAMS) $(bin_SCRIPTS)
