@@ -1,0 +1,91 @@
+6.27736e-06
+-3.80598e-05
+-0.000101959
+-0.000183375
+-0.000231972
+-0.000174802
+5.435e-05
+0.000465877
+0.000966219
+0.00134126
+0.00129987
+0.000586991
+-0.000858992
+-0.00276596
+-0.00448732
+-0.00512904
+-0.00385791
+-0.000320216
+0.00498247
+0.010554
+0.0141578
+0.0134978
+0.00717975
+-0.00436758
+-0.0184222
+-0.0302951
+-0.0345716
+-0.0270402
+-0.00673792
+0.0226684
+0.0528865
+0.0727659
+0.0716259
+0.0433181
+-0.0102537
+-0.077504
+-0.138378
+-0.168556
+-0.145829
+-0.0569713
+0.0969251
+0.298486
+0.5164
+0.711814
+0.847245
+0.895668
+0.847245
+0.711814
+0.5164
+0.298486
+0.0969251
+-0.0569713
+-0.145829
+-0.168556
+-0.138378
+-0.077504
+-0.0102537
+0.0433181
+0.0716259
+0.0727659
+0.0528865
+0.0226684
+-0.00673792
+-0.0270402
+-0.0345716
+-0.0302951
+-0.0184222
+-0.00436758
+0.00717975
+0.0134978
+0.0141578
+0.010554
+0.00498247
+-0.000320216
+-0.00385791
+-0.00512904
+-0.00448732
+-0.00276596
+-0.000858992
+0.000586991
+0.00129987
+0.00134126
+0.000966219
+0.000465877
+5.435e-05
+-0.000174802
+-0.000231972
+-0.000183375
+-0.000101959
+-3.80598e-05
+6.27736e-06
