@@ -1,0 +1,113 @@
+4.74509e-07
+-2.0537e-07
+-3.00467e-06
+-1.057e-05
+-2.61857e-05
+-5.31743e-05
+-9.34333e-05
+-0.000145319
+-0.000201214
+-0.000245453
+-0.000253573
+-0.000193975
+-3.29385e-05
+0.000256655
+0.00068344
+0.00122432
+0.00181288
+0.00233354
+0.00262554
+0.00250053
+0.00177489
+0.000315284
+-0.00190843
+-0.00477244
+-0.00796325
+-0.0109705
+-0.0131204
+-0.0136562
+-0.0118641
+-0.00723291
+0.000375859
+0.0105787
+0.022378
+0.0341613
+0.0438173
+0.0489783
+0.0473742
+0.0372642
+0.0178837
+-0.0101645
+-0.0446557
+-0.0816938
+-0.115915
+-0.140953
+-0.150145
+-0.137391
+-0.0980702
+-0.0298812
+0.0665319
+0.187278
+0.32532
+0.470994
+0.612919
+0.739182
+0.838658
+0.902297
+0.924194
+0.902297
+0.838658
+0.739182
+0.612919
+0.470994
+0.32532
+0.187278
+0.0665319
+-0.0298812
+-0.0980702
+-0.137391
+-0.150145
+-0.140953
+-0.115915
+-0.0816938
+-0.0446557
+-0.0101645
+0.0178837
+0.0372642
+0.0473742
+0.0489783
+0.0438173
+0.0341613
+0.022378
+0.0105787
+0.000375859
+-0.00723291
+-0.0118641
+-0.0136562
+-0.0131204
+-0.0109705
+-0.00796325
+-0.00477244
+-0.00190843
+0.000315284
+0.00177489
+0.00250053
+0.00262554
+0.00233354
+0.00181288
+0.00122432
+0.00068344
+0.000256655
+-3.29385e-05
+-0.000193975
+-0.000253573
+-0.000245453
+-0.000201214
+-0.000145319
+-9.34333e-05
+-5.31743e-05
+-2.61857e-05
+-1.057e-05
+-3.00467e-06
+-2.0537e-07
+4.74509e-07
